styled the incorrect/ correct piece to be left aligned with question answer options

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,6 +54,7 @@ header a {
   font-weight: 200;
   font-style: italic;
   opacity: 0.4;
+  text-align: left;
 }
 /*Start quiz button & answer option buttons*/
 .start-quiz {
@@ -71,6 +72,7 @@ header a {
   font-size: 1rem;
   padding: 1rem;
 }
+
 .answer-option {
   text-align: left;
   width: 80%;
